--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-cookie": "^7.1.4",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-moment": "^1.1.3",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -17,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:8080",
   "eslintConfig": {
     "extends": [
       "react-app",
